--- a/src/Hw1/index.html
+++ b/src/Hw1/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    .folders div {
+      display: none;
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
@@ -132,5 +138,11 @@
       </div>
     </div>
   </div>
+  <script>
+    function toggleFolder(folderId) {
+      const folder = document.getElementById(folderId);
+      folder.style.display = (folder.style.display === 'none' || folder.style.display === '') ? 'block' : 'none';
+    }
+</script>
 </body>
 </html>
